--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/techreturners/javascript_practice#readme",
   "devDependencies": {
-    "eslint": "^5.15.1",
-    "jest": "^24.5.0"
+    "eslint": "^5.15.1"
   }
 }
