--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   },
   "homepage": "https://github.com/techreturners/javascript_practice#readme",
   "devDependencies": {
-    "eslint": "^5.15.1"
-  }
+    "eslint": "^5.15.1",
+    "jest": "^25.3.0"
+  },
+  "directories": {
+    "doc": "docs",
+    "test": "test"
+  },
+  "dependencies": {}
 }
